(fix): fix bad spacing on calendar buttons

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -24,12 +24,6 @@ $calendar-day-text: $color-text-med;
     padding: .4rem .5rem;
     font-weight: 500;
     line-height: 1.8rem;
-
-    .next-month,
-    .prev-month {
-      line-height: 1.2rem;
-      font-size: 1.2rem;
-    }
   }
 
   .day-name-row {
